apps/status/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uptimekuma
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
