apps/status/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: status
spec:
  selector:
    app: status
  ports:
    - port: 3001
      targetPort: 3001
